<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    card_view:cardCornerRadius="4dp">
    <LinearLayout
        android:id="@+id/cv_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rel_item_now_play"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgPoster"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                tools:src="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/imgPoster"
                android:layout_toRightOf="@id/imgPoster"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/tv_item_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_name"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/imgPoster"
                android:layout_toRightOf="@id/imgPoster"
                android:maxLines="5"
                android:textSize="12sp"
                tools:text="@string/description" />

            <TextView
                android:id="@+id/tv_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_toRightOf="@+id/imgPoster"
                android:drawableLeft="@drawable/ic_date_range_black_24dp"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="12sp"
                tools:text="@string/date" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/btn_set_favorite"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-10dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_favorite_black_24dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/favorite"
                android:textSize="14sp" />
            <Button
                android:id="@+id/btn_set_share"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_marginRight="-10dp"
                android:textSize="14sp"
                android:drawableStart="@drawable/ic_share_black_24dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/share"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>